fix(plugins/plugin-client-common): tweak sidecar button spacing a bit
This PR also refactors the sidecar bottom toolbar stylings into their own file.

Fixes #6873

--- a/plugins/plugin-client-common/web/scss/components/Sidecar/BottomToolbar.scss
+++ b/plugins/plugin-client-common/web/scss/components/Sidecar/BottomToolbar.scss
@@ -1,5 +1,5 @@
 /*
- * Copyright 2020-21 IBM Corporation
+ * Copyright 2021 IBM Corporation
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,6 +14,30 @@
  * limitations under the License.
  */
 
-@import 'Base';
-@import 'Nested';
-@import 'BottomToolbar';
+@import 'mixins';
+
+@include SidecarBottomToolbar {
+  padding-right: 0;
+  align-items: unset;
+  font-size: calc(12em / 16);
+  color: var(--color-text-02);
+  background-color: var(--color-sidecar-header);
+
+  @include SidecarToolbarButton {
+    padding: 0 1em;
+    border-left: 1px solid var(--color-table-border3);
+
+    &:hover {
+      background-color: var(--color-table-border3);
+    }
+
+    a,
+    button {
+      &:hover {
+        [role='tab'] {
+          color: var(--color-text-01);
+        }
+      }
+    }
+  }
+}
